--- a/team.html
+++ b/team.html
@@ -33,15 +33,15 @@
     </nav>
   </header>
 
-  <section class="features" id="features">
+  <section class="features" id="features" style="padding-top: 120px;">
     <div class="container">
       <h2 class="section-title">Meet Our Team</h2>
       <p class="section-subtitle">The OnlyWorks family</p>
       
       <div class="features-grid">
-        <div class="feature-card">
-          <div class="feature-icon">
-            <img src="https://media.licdn.com/dms/image/v2/D4E03AQEL9eQ3-N1NZQ/profile-displayphoto-shrink_800_800/B4EZbMrU3ZGcAc-/0/1747190632317?e=1758758400&v=beta&t=2ZfYlmFzQJ1RiBy4dIjpGHpluk0NH-SlGVxIDD-5fTs" alt="Brodey Wang" style="width: 100%; height: 100%; object-fit: cover; border-radius: 4px;">
+        <div class="feature-card" style="opacity: 1; transform: translateY(0);">
+          <div class="feature-icon" style="background: none; width: 100px; height: 100px; margin: 0 auto;">
+            <img src="https://media.licdn.com/dms/image/v2/D4E03AQEL9eQ3-N1NZQ/profile-displayphoto-shrink_800_800/B4EZbMrU3ZGcAc-/0/1747190632317?e=1758758400&v=beta&t=2ZfYlmFzQJ1RiBy4dIjpGHpluk0NH-SlGVxIDD-5fTs" alt="Brodey Wang" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
           </div>
           <h3 class="feature-title">Brodey Wang</h3>
           <p class="feature-desc">CEO</p>
@@ -51,9 +51,9 @@
           </button>
         </div>
         
-        <div class="feature-card">
-          <div class="feature-icon">
-            <img src="https://media.licdn.com/dms/image/v2/D4E03AQFH2H25hypK2Q/profile-displayphoto-shrink_800_800/B4EZW1iLVmGgAg-/0/1742507390612?e=1758758400&v=beta&t=vDipuPq2A2hLwlM3wswuspUTCYlfZ5J8F-ls7qRtOiU" alt="Namkha Tashi Oedzer" style="width: 100%; height: 100%; object-fit: cover; border-radius: 4px;">
+        <div class="feature-card" style="opacity: 1; transform: translateY(0);">
+          <div class="feature-icon" style="background: none; width: 100px; height: 100px; margin: 0 auto;">
+            <img src="https://media.licdn.com/dms/image/v2/D4E03AQFH2H25hypK2Q/profile-displayphoto-shrink_800_800/B4EZW1iLVmGgAg-/0/1742507390612?e=1758758400&v=beta&t=vDipuPq2A2hLwlM3wswuspUTCYlfZ5J8F-ls7qRtOiU" alt="Namkha Tashi Oedzer" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
           </div>
           <h3 class="feature-title">Namkha Tashi Oedzer</h3>
           <p class="feature-desc">CTO</p>
