--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
   
-  <link rel="icon" href="logo.png" type="image/png">
-  <link rel="shortcut icon" href="logo.png" type="image/png">
-  <link rel="apple-touch-icon" href="logo.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/logo.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/logo.png">
+<link rel="shortcut icon" href="/logo.png" type="image/x-icon">
+  
 </head>
 <body>
   <header id="header">
@@ -42,11 +43,10 @@
         <div class="hero-btns">
           
           <button class="btn btn-primary" onclick="location.href='https://onlyworks-llm.vercel.app/'">
-            <i class="fas fa-graduation-cap"></i>
+            <i class="fas fa-arrow-right"></i>
             Start recording now
           </button>
-          <button class="btn btn-secondary" onclick="location.href='https://onlyworks-llm.vercel.app/'">
-            <i class="fas fa-building"></i>
+          <button class="btn btn-secondary" onclick="location.href='tutorial.html'">
             Learn more
           </button>
 
