--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="team.html">Meet The team</a></li>
-        <li><a href="/auth/google">Sign in</a></li>
+        <li><a href="auth.html">Sign in</a></li>
         <li class="divider"></li>
       </ul>
-      <a href="/auth/google" class="cta-button">Start recording</a>
+      <a href="auth.html" class="cta-button">Start recording</a>
       <div class="mobile-menu-btn">
         <i class="fas fa-bars"></i>
       </div>
@@ -41,7 +41,7 @@
         <p class="hero-subtitle">OnlyWorks allows you to track your progress and efficiency. We work directly with businesses to understand their needs, then match them with reliable student talent who are ready to contribute. Our goal is to streamline the hiring process no more ghosting, no more unqualified matches just the right fit, faster. We believe every student deserves the chance to earn and grow. And every business deserves talent they can count on.
 </p>
         <div class="hero-btns">
-          <button class="btn btn-primary" onclick="location.href='/auth/google'">
+          <button class="btn btn-primary" onclick="location.href='auth.html'">
             <i class="fas fa-arrow-right"></i>
             Start recording now
           </button>
