--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -12,25 +12,25 @@
   <link rel="shortcut icon" href="logo.png" type="image/png">
   <link rel="apple-touch-icon" href="logo.png">
 </head>
-  <header id="header">
-    <nav class="container">
-      <a href="/" class="logo">
-        <img src="logo.png" alt="OnlyWorks Logo">
-        OnlyWorks
-      </a>
-      <ul class="nav-links">
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="team.html">Meet The Team</li>
-        <li><a href="/register.html">Sign in</a>
-        <li class="divider"></li>
-      </ul>
-      <a href="/register.html" class="cta-button">Start recording</a>
-      <div class="mobile-menu-btn">
-        <i class="fas fa-bars"></i>
-      </div>
-    </nav>
-  </header>
+<header id="header">
+  <nav class="container">
+    <a href="/" class="logo">
+      <img src="logo.png" alt="OnlyWorks Logo">
+      OnlyWorks
+    </a>
+    <ul class="nav-links">
+      <li><a href="pricing.html">Pricing</a></li>
+      <li><a href="aboutus.html">About Us</a></li>
+      <li><a href="team.html">Meet The team</a></li>
+      <li><a href="https://onlyworks-llm.vercel.app/">Sign in</a></li>
+      <li class="divider"></li>
+    </ul>
+    <a href="https://onlyworks-llm.vercel.app/" class="cta-button">Start recording</a>
+    <div class="mobile-menu-btn">
+      <i class="fas fa-bars"></i>
+    </div>
+  </nav>
+</header>
   
 <body>
 <section class="hero">
