--- a/public/team.html
+++ b/public/team.html
@@ -23,10 +23,10 @@
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="team.html">Meet The team</a></li>
-        <li><a href="/register.html">Sign in</a></li>
+        <li><a href="https://onlyworks-llm.vercel.app/">Sign in</a></li>
         <li class="divider"></li>
       </ul>
-      <a href="/register.html" class="cta-button">Start recording</a>
+      <a href="https://onlyworks-llm.vercel.app/" class="cta-button">Start recording</a>
       <div class="mobile-menu-btn">
         <i class="fas fa-bars"></i>
       </div>
