--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -56,6 +56,24 @@ Onlyworks. Verified jobs. Real students. Smarter hiring. That's what only works.
       </div>
     </div>
 </section>
+<section class="cta" id="cta">
+  <div class="container">
+    <h2 class="cta-title">Ready to Get Started?</h2>
+    <p class="cta-subtitle">Join the OnlyWorks community today and discover new opportunities</p>
+    <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+      <button class="btn btn-cta" onclick="location.href='/auth/google'">
+        <i class="fas fa-graduation-cap"></i>
+        <i class="fab fa-google" style="margin-left: 4px;"></i>
+        Student Sign Up
+      </button>
+      <button class="btn btn-cta" onclick="location.href='/auth/google'">
+        <i class="fas fa-building"></i>
+        <i class="fab fa-google" style="margin-left: 4px;"></i>
+        Employer Sign Up
+      </button>
+    </div>
+  </div>
+</section>
 <footer>
     <div class="container">
       <div class="footer-content">
