fixed onboarding routes

--- a/public/onboarding.html
+++ b/public/onboarding.html
@@ -152,7 +152,7 @@
       errorDiv.style.display = 'none';
       
       try {
-        const response = await fetch('/api/user/profile', {
+        const response = await fetch('/api/complete-onboarding', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
