--- a/public/onboarding.html
+++ b/public/onboarding.html
@@ -215,7 +215,7 @@
             <li><a href="#" class="footer-menu-item">Help Center</a></li>
             <li><a href="#" class="footer-menu-item">Student Guide</a></li>
             <li><a href="#" class="footer-menu-item">Employer Guide</a></li>
-            <li><a href="https://onlyworks-llm.vercel.app/" class="footer-menu-item">Try Demo</a></li>
+            <li><a href="/auth/google" class="footer-menu-item">Try Demo</a></li>
           </ul>
         </div>
         
