--- a/public/pricing.html
+++ b/public/pricing.html
@@ -26,7 +26,7 @@
         <li><a href="/auth/google">Sign in</a>
         <li class="divider"></li>
       </ul>
-      <a href="/auth/google'" class="cta-button">Start recording</a>
+      <a href="/auth/google" class="cta-button">Start recording</a>
       <div class="mobile-menu-btn">
         <i class="fas fa-bars"></i>
       </div>
