--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <!-- SEO Title & Description -->
   <title>Only Works | Self Reporting AI, Performance Tracking & Verifying Workflow</title>
   <meta name="description" content="Only Works helps employers and teams generate reports, monitor employee performance, and streamline workflows effortlessly. Simple, fast, and future-ready for smarter work management.">
-
+  <meta name="google-site-verification" content="google82e40754ada9c431">
   <!-- Keywords (optional for some engines, but can help) -->
   <meta name="keywords" content="employee reporting, performance tracking, workflow automation, employee monitoring, HR tools, Only Works, team management software">
 
@@ -25,6 +25,7 @@
   <meta name="twitter:image" content="https://www.only-works.com/logo.png">
 
   <!-- Canonical URL -->
+
   <link rel="canonical" href="https://www.only-works.com/">
 
   <!-- Fonts & Styles -->
