--- a/public/index.html
+++ b/public/index.html
@@ -435,7 +435,7 @@
 
       // Update nav CTA
       const navCta = document.getElementById('nav-cta');
-      navCta.innerHTML = '<a href="/auth/google" class="cta-button">Get Started</a>';
+      navCta.innerHTML = '<a href="/auth/google" class="cta-button">Start Recording</a>';
 
       // Keep original hero content
       document.getElementById('hero-title').textContent = 'Work Smarter';
