--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
   <section class="hero" id="hero-section">
     <div class="container hero-content">
       <div class="hero-text">
-        <h1 class="hero-title" id="hero-title">Work Smarter</h1>
+        <h1 class="hero-title" id="hero-title">AI Productivity Tool to Streamline and Verify Work</h1>
         <p class="hero-subtitle" id="hero-subtitle">OnlyWorks allows you to track your progress and efficiency. We work directly with businesses to understand their needs, then match them with reliable student talent who are ready to contribute. Our goal is to streamline the hiring process no more ghosting, no more unqualified matches just the right fit, faster. We believe every student deserves the chance to earn and grow. And every business deserves talent they can count on.</p>
         <div class="hero-btns" id="hero-btns">
           <!-- Dynamic buttons will be inserted here -->
