--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO Title & Description -->
-  <title>Only Works | Self Reporting AI, Performance Tracking & Verifying Workflow</title>
+  <title>AI Work Platform for Teams, Projects, and Workflows | OnlyWorks</title>
   <meta name="description" content="Only Works helps employers and teams generate reports, monitor employee performance, and streamline workflows effortlessly. Simple, fast, and future-ready for smarter work management.">
   <meta name="google-site-verification" content="google82e40754ada9c431">
   <!-- Keywords (optional for some engines, but can help) -->
